# NyarchAssistant

./: .gitignore  build_locale.sh  install.sh  meson.build  moe.nyarchlinux.assistant.json  moe.waifu.assistant.json
.github/workflows/: build-locales.yml  flatpak-builder.yml
data/: meson.build  moe.nyarchlinux.assistant.desktop.in  moe.nyarchlinux.assistant.gschema.xml  moe.waifu.assistant.appdata.xml.in  moe.waifu.assistant.desktop.in
data/icons/: meson.build
modules/: live2d.json
po/: POTFILES  meson.build
src/: constants.py  controller.py  dataset.py  meson.build  smart_prompt.py  waifuassistant.gresource.xml  waifuassistant.in
src/handlers/avatar/: live2d_handler.py
src/handlers/smart_prompt/: smart_prompt.py
src/ui/widgets/: file.py
